--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^3.0.1
+  flutter_signin_button: ^2.0.0
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/voto.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,17 +77,63 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: lib/assets/Inter/Inter-Thin.otf
+          weight: 100
+          style: normal
+        - asset: lib/assets/Inter/Inter-ThinItalic.otf
+          weight: 100
+          style: italic
+        - asset: lib/assets/Inter/Inter-ExtraLight.otf
+          weight: 200
+          style: normal
+        - asset: lib/assets/Inter/Inter-ExtraLightItalic.otf
+          weight: 200
+          style: italic
+        - asset: lib/assets/Inter/Inter-Light.otf
+          weight: 300
+          style: normal
+        - asset: lib/assets/Inter/Inter-LightItalic.otf
+          weight: 300
+          style: italic
+        - asset: lib/assets/Inter/Inter-Regular.otf
+          weight: 400
+          style: normal
+        - asset: lib/assets/Inter/Inter-Italic.otf
+          weight: 400
+          style: italic
+        - asset: lib/assets/Inter/Inter-Medium.otf
+          weight: 500
+          style: normal
+        - asset: lib/assets/Inter/Inter-MediumItalic.otf
+          weight: 500
+          style: italic
+        - asset: lib/assets/Inter/Inter-SemiBold.otf
+          weight: 600
+          style: normal
+        - asset: lib/assets/Inter/Inter-SemiBoldItalic.otf
+          weight: 600
+          style: italic
+        - asset: lib/assets/Inter/Inter-Bold.otf
+          weight: 700
+          style: normal
+        - asset: lib/assets/Inter/Inter-BoldItalic.otf
+          weight: 700
+          style: italic
+        - asset: lib/assets/Inter/Inter-ExtraBold.otf
+          weight: 800
+          style: normal
+        - asset: lib/assets/Inter/Inter-ExtraBoldItalic.otf
+          weight: 800
+          style: italic
+        - asset: lib/assets/Inter/Inter-Black.otf
+          weight: 900
+          style: normal
+        - asset: lib/assets/Inter/Inter-BlackItalic.otf
+          weight: 900
+          style: italic
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
