--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
-  flutter_signin_button: ^2.0.0
   webview_flutter: ^3.0.4
+  jwt_decode: ^0.3.1
+  flutter_secure_storage: ^6.1.0
 
 dev_dependencies:
   flutter_test:
