--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^3.0.4
   jwt_decode: ^0.3.1
   flutter_secure_storage: ^6.1.0
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_test:
