--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/back.png
+    - assets/github.png
     - assets/google.png
     - assets/members.png
     - assets/polls.png
@@ -74,6 +75,9 @@ flutter:
     - assets/user.png
     - assets/vote.png
     - assets/voting_system.png
+    - assets/members/enrique.png
+    - assets/members/julio.png
+    - assets/members/oliver.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
